Adding missing sections into the config file

--- a/i8kmon.conf
+++ b/i8kmon.conf
@@ -1,3 +1,16 @@
+# External program to control the fans
+set config(i8kfan)	/usr/bin/i8kfan
+
+# Filename of the apci executable. i8kmon uses acpi to query whether notebook
+# is on-line or on battery.
+set config(acpi)        "acpi"
+
+# Automatic fan control, override with --auto option
+set config(auto)        1
+
+# Report status on stdout, override with --verbose option
+set config(verbose)	0
+
 # Status check timeout (seconds), override with --timeout option
 set config(timeout)     2
 
